# waifu-crop

./: .gitignore  Cargo.toml  README.md  add.py  choose.py  crop.py  flake.nix  generate.py  main.py  preview.py  requirements.txt  utils.py
anime_face_detector/: __init__.py  detector.py
src/: lib.rs  main.rs
