[package]
name = "wallpaper-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "text-editor", features = [
    "canvas",
    "image",
] }
dirs = "5.0.1"
image = "0.24.7"
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
